# social-fi-credit

./: .env.example  .gitignore  ESTRUTURA DO PROJETO.MD  LICENSE  README.md  docker-compose.yml  package.json  setup_project.sh
.github/workflows/: deploy.yml  test.yml
backend/: Dockerfile  Dockerfile.eliza  requirements.txt
backend/api/: main.py
backend/api/routes/: loans.py  users.py
backend/api/services/: blockchain.py  loan_service.py  user_service.py
backend/config/: settings.py
backend/eliza_os/: __init__.py  main.py  score_calculator.py  sentiment_analyzer.py  twitter_monitor.py
docs/: api-docs.md  technical.md  user-guide.md
frontend/: Dockerfile  craco.config.js  nginx.conf  package.json  tailwind.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.tsx
frontend/src/assets/styles/: global.css
frontend/src/components/common/: Footer.tsx  Header.tsx
frontend/src/components/dashboard/: ScoreDisplay.tsx
frontend/src/contexts/: UserContext.tsx  WalletContext.tsx
frontend/src/pages/: Dashboard.tsx  Home.tsx  Loans.tsx
frontend/src/services/: api.ts
scripts/: deploy_contracts.sh  run_tests.sh  setup_environment.sh
smart-contracts/: Cargo.toml  test_config.rs
smart-contracts/0. Obsoletos/: debt_token_fuzzy_test.rs
smart-contracts/common-types/: Cargo.toml
smart-contracts/common-types/src/: lib.rs
smart-contracts/debt-token/: Cargo.toml  sc-config.toml
smart-contracts/debt-token/meta/: Cargo.toml
smart-contracts/debt-token/meta/src/: main.rs
smart-contracts/debt-token/output/: debt-token.abi.json  debt-token.imports.json  debt-token.mxsc.json  debt-token.wasm  proxy.rs
smart-contracts/debt-token/scenarios/: debt_token.scen.json  debt_token_flow_scenario.rs
smart-contracts/debt-token/src/: debt_token.rs  debt_token_proxy.rs
smart-contracts/debt-token/tests/: debt_token_fuzzy_test.rs  debt_token_security_test.rs  debt_token_test.rs  suit_debt_token_fuzzy_test.rs  suit_debt_token_security_test.rs  suit_debt_token_tests.rs  testesimples.rs
smart-contracts/debt-token/wasm/: Cargo.toml
smart-contracts/debt-token/wasm/src/: lib.rs
smart-contracts/liquidity-pool/: Cargo.toml
smart-contracts/liquidity-pool/meta/: Cargo.toml
smart-contracts/liquidity-pool/meta/src/: main.rs
smart-contracts/liquidity-pool/output/: liquidity-pool.abi.json  liquidity-pool.imports.json  liquidity-pool.mxsc.json  liquidity-pool.wasm  proxy.rs
smart-contracts/liquidity-pool/scenarios/: liquidity_pool.scen.json  liquidity_pool_flow_scenario.rs
smart-contracts/liquidity-pool/src/: liquidity_pool.rs
smart-contracts/liquidity-pool/tests/: fuzzy.rs  liquidity_pool_fuzzy_test.rs  liquidity_pool_security_test.rs  liquidity_pool_test.rs
smart-contracts/liquidity-pool/wasm/: Cargo.toml
smart-contracts/liquidity-pool/wasm/src/: lib.rs
smart-contracts/loan-controller/: Cargo.toml
smart-contracts/loan-controller/meta/: Cargo.toml
smart-contracts/loan-controller/meta/src/: main.rs
smart-contracts/loan-controller/output/: loan-controller.abi.json  loan-controller.imports.json  loan-controller.mxsc.json  loan-controller.wasm  proxy.rs
smart-contracts/loan-controller/scenarios/: loan_controller.scen.json  loan_flow_scenario.rs
smart-contracts/loan-controller/src/: lib.rs  loan_controller.rs
smart-contracts/loan-controller/tests/: loan_controller_fuzzy_test.rs  loan_controller_security_test.rs  loan_controller_test.rs
smart-contracts/loan-controller/wasm/: Cargo.toml
smart-contracts/loan-controller/wasm/src/: lib.rs
smart-contracts/lp-token/: Cargo.toml
smart-contracts/lp-token/meta/: Cargo.toml
smart-contracts/lp-token/meta/src/: main.rs
smart-contracts/lp-token/output/: lp-token.abi.json  lp-token.imports.json  lp-token.mxsc.json  lp-token.wasm  proxy.rs
smart-contracts/lp-token/src/: lib.rs
smart-contracts/lp-token/tests/: lp_token_test.rs
smart-contracts/lp-token/wasm/: Cargo.toml
smart-contracts/lp-token/wasm/src/: lib.rs
smart-contracts/reputation-score/: Cargo.toml
smart-contracts/reputation-score/meta/: Cargo.toml
smart-contracts/reputation-score/meta/src/: main.rs
smart-contracts/reputation-score/output/: proxy.rs  reputation-score.abi.json  reputation-score.imports.json  reputation-score.mxsc.json  reputation-score.wasm
smart-contracts/reputation-score/scenarios/: loan_eligibility_scenario.rs  reputation_score.scen.json
smart-contracts/reputation-score/src/: lib.rs  reputation_score.rs
smart-contracts/reputation-score/tests/: reputation_score_fuzzy_test.rs  reputation_score_security_test.rs  reputation_score_test.rs
smart-contracts/reputation-score/wasm/: Cargo.toml
smart-contracts/reputation-score/wasm/src/: lib.rs
smart-contracts/tests/: Cargo.toml  integrated_system_test.rs  lib.rs
