#Cargo do debt-token presente em smart-contracts/debt-token/Cargo.toml
[package]
name = "debt-token"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/debt_token.rs"

[dependencies]
common-types = { path = "../common-types" }
multiversx-sc = "0.57.1"
getrandom = { version = "0.2.10", features = ["js"] }
fastrand = "2.3.0"
rand = "0.8"
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
#elrond-wasm = "0.38.0"  # Ajuste para a versão que você está usando

[dev-dependencies]
multiversx-sc-scenario = "0.57.1"
#elrond-wasm-debug = "0.38.0"  # Para testes


