#Cargo do liquidity-pool presente em smart-contracts/liquidity-pool/Cargo.toml
[package]
name = "liquidity-pool"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/liquidity_pool.rs"

[dependencies]
multiversx-sc = "0.57.1"
common-types = { path = "../common-types" }
loan-controller = { path = "../loan-controller"}
getrandom = { version = "0.2.10", features = ["js"] }
rand = "0.8.5"
num-traits = "0.2"
#liquidity_pool = { path = "../liquidity_pool" }

[dev-dependencies]
multiversx-sc-scenario = "0.57.1"