[package]
name = "reputation-score"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/reputation_score.rs"

[dependencies]
multiversx-sc = "0.57.1"
common-types = { path = "../common-types" }

[dev-dependencies]
multiversx-sc-scenario = "0.57.1"
rand = { version = "0.8", features = ["std_rng"] }