[package]
name = "reputation-score"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/reputation_score.rs"

[dependencies]
multiversx-sc = { version = "0.57.1", features = ["alloc"] }
common-types = { path = "../common-types" }
getrandom = { version = "0.2.10", features = ["js"] }
rand = { version = "0.8.5", default-features = false }

[dev-dependencies]
multiversx-sc-scenario = "0.57.1"
rand = { version = "0.8", features = ["std_rng"] }

[features]
default = []